Update formdata of video uploading
